--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     -->
     <title>Online Book Store</title>
   </head>
-  <body style="background-color: #272B30">
+  <body style="background-color: #f0c8ea">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
